added the routes, codes, styling, info and logic in pug files

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -58,20 +58,20 @@ a:hover{
 
 .portfolio-me{
   padding: 20px;
-  background: #121213;
+  background: #4d4d4d;
   color: #fff;
   box-shadow: none !important;
 }
 
   .portfolio-me p{
     font-size: 14px;
-    color: #999;
+    color: #ffe6e6;
   }
 
   .portfolio-me a{
     font-family: 'Lato', 'Helvetica Neue', Helvetica, Arial, sans-serif;
     font-weight: 600;
-    color: #555;
+    color: #ffe6e6;
     font-size: 13px;
     letter-spacing: 2.5px;
     -webkit-text-transform: uppercase;
