Cleaned up the files,ready for final submission

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -17,16 +17,13 @@ html(class="no-js" lang="en" dir="ltr")
             img.thumbnail(src='/static/images/profile_pic.jpg')
           .cell.auto
 
-            //- Add your name here.
             h5 Tasneem Amreliwala
 
-            //- Add text here to describe who you are, what you do, and why you are so awesome.
             p.text-light
-              | I am a web developer, and my educational background consists of a bachelors in Chemistry followed by an MBA. I worked as an HR business partner at VFS global. My interest in technology led me completing Launch Academy, an intensive coding bootcamp.
+              | I am a web developer, and my educational background consists of a bachelors in Chemistry followed by an MBA. I worked as an HR business partner at VFS global.
+              | My interest in technology led me completing Launch Academy, an intensive coding bootcamp.
               | Currently I am working as a software engineer intern at HubSpot, where I work on projects as a talentpath techdegree student.
 
-
-            //- Add about page route to the href below.
             a(href='/about') Learn More →
 
     .off-canvas-content(data-off-canvas-content='')
@@ -34,11 +31,8 @@ html(class="no-js" lang="en" dir="ltr")
         .title-bar-left
           button.menu-icon(type='button', data-toggle='my-info')
 
-          //- Tasneem Amreliwala.  This is for the mobile screen sized version.
-          span.title-bar-title Name
+          span.title-bar-title Tasneem Amreliwala.
       block content
-
-
 
   script(src='/static/js/vendor/jquery.js')
   script(src='/static/js/vendor/what-input.js')
